Scientific clarity: assumptions, positivity, survival, MSM scope

--- a/lectures/L02_ideal_rct/student/L02_ideal_rct_student.ipynb
+++ b/lectures/L02_ideal_rct/student/L02_ideal_rct_student.ipynb
@@ -22,6 +22,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4dc3bea2",
+   "metadata": {},
+   "source": [
+    "### Scientific note (positivity)\n",
+    "\n",
+    "In an **ideal individually randomized trial**, positivity for treatment assignment is typically ensured **by design** (each eligible participant has a nonzero chance of each arm).\n",
+    "In practice, apparent positivity problems can still arise due to eligibility restrictions, deterministic protocols within subgroups, or deviations/non-adherence."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8eb119fe",
