--- a/lectures/L03_observational_assumptions/student/L03_observational_assumptions_student.ipynb
+++ b/lectures/L03_observational_assumptions/student/L03_observational_assumptions_student.ipynb
@@ -22,6 +22,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "56e4ddfa",
+   "metadata": {},
+   "source": [
+    "### Scientific note (consistency)\n",
+    "\n",
+    "You may see the third identifiability condition written as **consistency**: if a person receives treatment level \\(A=a\\), then their observed outcome equals their potential outcome under that treatment (\\(Y = Y^a\\)).\n",
+    "\n",
+    "This requires the intervention to be well-defined (no hidden “versions” that have different effects)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "888883ab",
