--- a/lectures/L07_selection_bias/student/L07_selection_bias_student.ipynb
+++ b/lectures/L07_selection_bias/student/L07_selection_bias_student.ipynb
@@ -182,7 +182,9 @@
    "metadata": {},
    "source": [
     "## Part B — Inverse probability of censoring weights (IPCW)\n",
-    "We model Pr(C=0 | A, L) and reweight complete cases.\n"
+    "We model Pr(C=0 | A, L) and reweight complete cases.\n",
+    "\n",
+    "**Key identifying assumption (informal):** conditional on the variables in your censoring model, being censored is independent of the (counterfactual) outcome.\n"
    ]
   },
   {
