--- a/lectures/L10_causal_survival/student/L10_causal_survival_student.ipynb
+++ b/lectures/L10_causal_survival/student/L10_causal_survival_student.ipynb
@@ -356,6 +356,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bcf9b9d1",
+   "metadata": {},
+   "source": [
+    "### Scientific note (what we are computing)\n",
+    "\n",
+    "The survival curves here are computed via the **g-formula for discrete-time hazards**: we fit a hazard model and then form \\(S(t)=\\prod_{k\\le t} (1-h(k))\\) under \\(A=1\\) and \\(A=0\\).\n",
+    "\n",
+    "Interpretation depends on correct model specification and appropriate handling of censoring."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d8228704",
