--- a/lectures/L11_msm_time_varying/student/L11_msm_time_varying_student.ipynb
+++ b/lectures/L11_msm_time_varying/student/L11_msm_time_varying_student.ipynb
@@ -279,6 +279,7 @@
     "        \"Missing cohort file for L11. Build it via:\\n\"\n",
     "        \"  - Colab: run the build cell above\\n\"\n",
     "        \"  - Local: python data/build_processed_extracts_demo.py --hr-threshold 100 --t-max 7\\n\"\n",
+    "        \"\\nNote: This notebook focuses on treatment weights (W_A). Censoring weights (W_C) are an extension.\" \n",
     "    )\n",
     "\n",
     "df.head()"
