--- a/lectures/L12_target_trial_workshop/student/L12_target_trial_workshop_student.ipynb
+++ b/lectures/L12_target_trial_workshop/student/L12_target_trial_workshop_student.ipynb
@@ -162,6 +162,7 @@
     "- Consistency: multiple versions of treatment?\n",
     "- Measurement error: outcome/treatment misclassification?\n",
     "- Selection bias: censoring / discharge / loss to follow-up?\n",
+    "- Time zero errors: immortal time bias / mis-specified start of follow-up?\n",
     "\n",
     "### 6) Deliverables checklist (what you will submit)\n",
     "- Target trial table (filled)\n",
