L11: clarify correct local cohort build command

--- a/lectures/L11_msm_time_varying/student/L11_msm_time_varying_student.ipynb
+++ b/lectures/L11_msm_time_varying/student/L11_msm_time_varying_student.ipynb
@@ -246,6 +246,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "49ff6d65",
+   "metadata": {},
+   "source": [
+    "### Correction (local build command)\n",
+    "\n",
+    "The `## Data` cell above may mention an older local build command.\n",
+    "\n",
+    "For this lecture, the correct local build command is:\n",
+    "\n",
+    "`python data/build_processed_extracts_demo.py --hr-threshold 100 --t-max 7`\n",
+    "\n",
+    "(Or, in Colab, just run the build cell at the top of the notebook.)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "568bd8e1",
    "metadata": {},
    "source": [
